--- a/src/Vts.Gui.Silverlight.Test/App.xaml
+++ b/src/Vts.Gui.Silverlight.Test/App.xaml
@@ -1,8 +1,7 @@
-﻿<Application xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-             x:Class="Vts.Gui.Silverlight.Test.App"
-             >
-    <Application.Resources>
-        
-    </Application.Resources>
+<Application xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" x:Class="Vts.Gui.Silverlight.Test.App" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" d1p1:Ignorable="d" xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006">
+  <Application.Resources>
+    <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" xmlns:vm="clr-namespace:Vts.Gui.Silverlight.Test.ViewModel" />
+  </Application.Resources>
 </Application>
+<!--sl-->
+<!--C:\Users\Carole\Documents\Visual Studio 2013\Projects\vts\src\Vts.Gui.Silverlight.Test\Vts.Gui.Silverlight.Test.csproj-->
