GUI: Multi-axis logic worked out for ForwardSolverViewModel. Next: ExecuteForwardSolver and then plotting
--HG--
branch : c-131208-spectral_fs_gui_changes

--- a/src/Vts.Gui.Silverlight/View/Application/Panels/ForwardSolverView.xaml
+++ b/src/Vts.Gui.Silverlight/View/Application/Panels/ForwardSolverView.xaml
@@ -26,6 +26,12 @@
         <StackPanel Visibility="{Binding ShowIndependentVariable, Converter={StaticResource myBooleanToVisibilityConverter}}">
             <v:RangeView DataContext="{Binding RangeVM}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,3,0,0"/>
         </StackPanel>
+        <StackPanel Visibility="{Binding ShowIndependentVariableTwo, Converter={StaticResource myBooleanToVisibilityConverter}}">
+            <v:RangeView DataContext="{Binding RangeTwoVM}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,3,0,0"/>
+        </StackPanel>
+        <StackPanel Visibility="{Binding ShowIndependentVariableThree, Converter={StaticResource myBooleanToVisibilityConverter}}">
+            <v:RangeView DataContext="{Binding RangeThreeVM}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,3,0,0"/>
+        </StackPanel>
         <!-- Optical Properties -->
         <StackPanel Visibility="{Binding ShowOpticalProperties, Converter={StaticResource myBooleanToVisibilityConverter}}">
             <v:OpticalPropertyView DataContext="{Binding OpticalPropertyVM}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,3,0,0"/>
