GUI: set limits on min/max number of multi-select choices by disabling checkboxes in non-supported situations
--HG--
branch : dc-140620-2p0

--- a/src/Vts.Gui.Silverlight/View/Controls/RadioButtonOptionView.xaml
+++ b/src/Vts.Gui.Silverlight/View/Controls/RadioButtonOptionView.xaml
@@ -24,6 +24,7 @@
                                  Tag="{Binding ID, Mode=TwoWay}"
                                  Content="{Binding DisplayName, Mode=TwoWay}"
                                  IsChecked="{Binding IsSelected, Mode=TwoWay}"
+                                 IsEnabled="{Binding IsEnabled, Mode=TwoWay}"
                                  Margin="1.5,3"/>
                         </DataTemplate>
                     </helpers:OptionTemplateSelector.MultiSelectTemplate>
