--- a/src/Vts.Gui.Silverlight/View/Application/Panels/PlotView.xaml
+++ b/src/Vts.Gui.Silverlight/View/Application/Panels/PlotView.xaml
@@ -9,7 +9,7 @@
     HorizontalAlignment="Left" VerticalAlignment="Top">
     <StackPanel Background="White">
         <!-- Chart control for the plot -->
-        <charting:Chart x:Name="myChart" Width="515"  Height="400" Background="White"
+        <charting:Chart x:Name="myChart" Width="515"  Height="400" Background="White" FontSize="12"
                 vm:ChartHelper.DependentValueBinding="Y"
                 vm:ChartHelper.IndependentValueBinding="X"
                 vm:ChartHelper.Title="TitlePropertyOnCollection"
