--- a/src/Vts.Gui.Silverlight/View/Application/Panels/SubPanels/SolutionDomainOptionView.xaml
+++ b/src/Vts.Gui.Silverlight/View/Application/Panels/SubPanels/SolutionDomainOptionView.xaml
@@ -104,8 +104,8 @@
                                 <TextBlock Text="{Binding Path=MainResource.Label_At, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="3,0,0,0" />
                                 <TextBlock Text="{Binding AxisLabel}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="5,0,0,0" />
                                 <TextBlock Text="="  VerticalAlignment="Center" HorizontalAlignment="Left" Margin="1,0,1,0"/>
-                                <TextBox Width="40" Text="{Binding AxisValue, Mode=TwoWay}"  VerticalAlignment="Center" HorizontalAlignment="Left" />
-                                <TextBlock Text="{Binding AxisUnits}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2,0,0,0" KeyDown="TextBox_KeyDown"/>
+                                <TextBox Width="40" Text="{Binding AxisValue, Mode=TwoWay}"  VerticalAlignment="Center" HorizontalAlignment="Left" KeyDown="TextBox_KeyDown" />
+                                <TextBlock Text="{Binding AxisUnits}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2,0,0,0"/>
                             </StackPanel>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
