GUI: fixed Range databinding error. All independent axes now bind directly to Forward/InverseSolverViewModel.AllRangeVMs collection, which is updated a) upon toggling the solution domain and/or b) upon involvement of spectral panel waavelength/OP inputs
--HG--
branch : c-131208-spectral_fs_gui_changes

--- a/src/Vts.Gui.Silverlight/View/Application/Panels/InverseSolverView.xaml
+++ b/src/Vts.Gui.Silverlight/View/Application/Panels/InverseSolverView.xaml
@@ -31,10 +31,10 @@
         <!-- Solution Domain -->
         <v:SolutionDomainOptionView DataContext="{Binding SolutionDomainTypeOptionVM}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,3,0,0"/>
         <!-- Detection Parameters -->
-        <ItemsControl ItemsSource="{Binding SolutionDomainTypeOptionVM.IndependentAxesVMs, Mode=TwoWay}">
+        <ItemsControl ItemsSource="{Binding AllRangeVMs, UpdateSourceTrigger=PropertyChanged}">
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <v:RangeView DataContext="{Binding AxisRangeVM}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,3,0,0"/>
+                    <v:RangeView DataContext="{Binding}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,3,0,0"/>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
