--- a/src/Vts.Gui.Silverlight/View/Application/Panels/PlotView.xaml
+++ b/src/Vts.Gui.Silverlight/View/Application/Panels/PlotView.xaml
@@ -3,10 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
              xmlns:v="clr-namespace:Vts.Gui.Silverlight.View;assembly=Vts.Gui.Silverlight"
              xmlns:oxy="clr-namespace:OxyPlot.Silverlight;assembly=OxyPlot.Silverlight"
-             HorizontalAlignment="Left" VerticalAlignment="Top">
+             HorizontalAlignment="Left" VerticalAlignment="Top" MinWidth="515" MinHeight="520">
     <StackPanel Background="White">
         <!-- Chart control for the plot -->
-        <oxy:PlotView Model="{Binding PlotModel}" Width="515" Height="400" />
+        <oxy:PlotView Model="{Binding PlotModel}" MinWidth="515" MinHeight="440" Width="Auto" Height="Auto" />
         <!-- Options below the plot -->
         <StackPanel>
             <StackPanel Orientation="Horizontal" Background="White" Margin="0,5,0,0">
