--- a/src/Vts.Gui.Silverlight/View/Application/SolverDemoView.xaml
+++ b/src/Vts.Gui.Silverlight/View/Application/SolverDemoView.xaml
@@ -6,7 +6,7 @@
     xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    mc:Ignorable="d" d:DesignWidth="1400">
+    mc:Ignorable="d" d:DesignWidth="1400" d:DesignHeight="800">
 
     <UserControl.DataContext>
         <vm:SolverDemoViewModel />
@@ -20,11 +20,11 @@
                         <GradientStop Color="White" Offset="1"/>
                     </RadialGradientBrush>
                 </Grid.Background>
-                <!--Create Grid with 4 rows and 3 columns-->
+                <!--Create Grid with 3 rows and 3 columns-->
                 <Grid.RowDefinitions>
                     <RowDefinition Height="70"/>
-                    <RowDefinition Height="Auto" />
                     <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="60"/>
@@ -72,7 +72,8 @@
                     Stretch="None"
 					VerticalAlignment="Center"
                     HorizontalAlignment="center"/>
-                <controls:TabControl x:Name="inputTabControl" SelectionChanged="inputTabControl_SelectionChanged"
+                <controls:TabControl x:Name="inputTabControl" 
+                    SelectionChanged="inputTabControl_SelectionChanged"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Top"  
                     Grid.Row="1"
@@ -117,13 +118,12 @@
                             HorizontalAlignment="Left"/>
                     </controls:TabItem>
                 </controls:TabControl>
-                <controls:TabControl x:Name="outputTabControl"
-                    VerticalAlignment="Top"  
+                <controls:TabControl x:Name="outputTabControl"  
                     Grid.Row="1"
                     Grid.Column="2"
-                    Margin="5,0,509,0"
-                    Width="Auto">
-                    <controls:TabItem Name="tabPlot" Width="Auto">
+                    Width="Auto"
+                    Height="Auto" Margin="0,0,0,0">
+                    <controls:TabItem Name="tabPlot">
                         <controls:TabItem.Header>
                             <ContentControl DataContext="{Binding PlotVM}">
                                 <StackPanel Orientation="Horizontal" >
@@ -136,7 +136,9 @@
                         </controls:TabItem.Header>
                         <local:PlotView
                             DataContext="{Binding PlotVM}"
-                            Background="LightSteelBlue" Width="Auto"/>
+                            VerticalAlignment="Stretch"
+                            HorizontalAlignment="Stretch"
+                            Margin="0,0,3,0"/>
                     </controls:TabItem>
                     <controls:TabItem Name="tabMap" Visibility="Collapsed">
                         <controls:TabItem.Header>
@@ -163,6 +165,7 @@
                 <local:TextOutputView
                     DataContext="{Binding TextOutputVM}"
                     VerticalAlignment="Stretch"
+                    HorizontalAlignment="Stretch"
 					Grid.Column="0"
                     Grid.Row="2" 
                     Grid.ColumnSpan="3" 
