Fixed the auto-sizing of the plot options and added a checkbox to hide the key.
--HG--
branch : lm-150515-oxyplot

--- a/src/Vts.Gui.Silverlight/View/Application/SolverDemoView.xaml
+++ b/src/Vts.Gui.Silverlight/View/Application/SolverDemoView.xaml
@@ -170,7 +170,8 @@
                     Grid.Row="2" 
                     Grid.ColumnSpan="3" 
                     Margin="3"
-                    Width="Auto"/>
+                    Width="Auto"
+                    Height="Auto" />
             </Grid>
         </ScrollViewer>
     </Grid>
