--- a/src/Vts.Gui.Silverlight/View/Application/Panels/PlotView.xaml
+++ b/src/Vts.Gui.Silverlight/View/Application/Panels/PlotView.xaml
@@ -10,13 +10,16 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="25"/>
+            <RowDefinition Height="135"/>
         </Grid.RowDefinitions>
         <!-- Chart control for the plot -->
         <oxy:PlotView Grid.Row="0"  Model="{Binding PlotModel}" MinHeight="440" MinWidth="515" />
-        <Image Grid.Row="1" Source="/Vts.Gui.Silverlight;Component/Resources/Images/logo-small.png" Height="50" Stretch="None"/>
+        <!-- Hide legend checkbox -->
+        <CheckBox Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Content="{Binding MainResource.Label_HideKey, Source={StaticResource LocalizedStrings}}" IsChecked="{Binding HideKey, Mode=TwoWay}" Margin="0,0,20,0"/>
         <!-- Options below the plot -->
-        <StackPanel Grid.Row="1" Orientation="Vertical" MinWidth="515" MinHeight="115" Margin="0,0,0,0" HorizontalAlignment="Center" Background="White">
+        <Image Grid.Row="2" Source="/Vts.Gui.Silverlight;Component/Resources/Images/logo-small.png" Height="50" Stretch="None"/>
+        <StackPanel Grid.Row="2" Orientation="Vertical" MinWidth="515" MinHeight="115" Height="115" Margin="10" VerticalAlignment="Top" HorizontalAlignment="Center" Background="White">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,5,0,0">
                 <StackPanel Orientation="Vertical" VerticalAlignment="Top" Margin="2,0,10,0">
                     <!-- Hold on checkbox -->
