Added code to disable the derivatives and multi-axis plotting for 2 layer Fixed the derivatives when plotting multi-axis in different solution domains

--- a/src/Vts.Gui.Silverlight/View/Application/Panels/SubPanels/SolutionDomainOptionView.xaml
+++ b/src/Vts.Gui.Silverlight/View/Application/Panels/SubPanels/SolutionDomainOptionView.xaml
@@ -82,8 +82,7 @@
                 <TextBlock Text="{Binding Path=MainResource.Label_IndependentAxis, Source={StaticResource LocalizedStrings}}" 
                        VerticalAlignment="Center" HorizontalAlignment="Left"
                        FontWeight="Bold"/>
-                <CheckBox IsChecked="{Binding AllowMultiAxis, Mode=TwoWay}" IsEnabled="{Binding EnableMultiAxis, Mode=OneWay}" HorizontalAlignment="Left" Margin="15,0,0,0" />
-                <TextBlock Text="allow multi-axis selection" HorizontalAlignment="Left"/>
+                <CheckBox IsChecked="{Binding AllowMultiAxis, Mode=TwoWay}" IsEnabled="{Binding EnableMultiAxis, Mode=OneWay}" HorizontalAlignment="Left" Margin="15,0,0,0" >allow multi-axis selection</CheckBox>
             </StackPanel>
             
             <!-- Radio button options -->
