Disabled spectral panel inputs for 2 layer, it doen't completely make sense for it to be there.

--- a/src/Vts.Gui.Silverlight/View/Application/Panels/SubPanels/SolutionDomainOptionView.xaml
+++ b/src/Vts.Gui.Silverlight/View/Application/Panels/SubPanels/SolutionDomainOptionView.xaml
@@ -12,8 +12,7 @@
                     <TextBlock Text="{Binding GroupName}" 
                            Visibility="{Binding ShowTitle, Converter={StaticResource myBooleanToVisibilityConverter}}" 
                            FontWeight="Bold"/>
-                    <CheckBox IsChecked="{Binding UseSpectralInputs, Mode=TwoWay}" HorizontalAlignment="Left" Margin="22,0,0,0"/>
-                    <TextBlock Text="use spectral panel inputs" HorizontalAlignment="Left"/>
+                    <CheckBox IsChecked="{Binding UseSpectralInputs, Mode=TwoWay}" Visibility="{Binding EnableSpectralPanelInputs, Converter={StaticResource myBooleanToVisibilityConverter}}" HorizontalAlignment="Left" Margin="22,0,0,0">use spectral panel inputs</CheckBox>
                 </StackPanel>
             </controls:HeaderedContentControl.Header>
             <controls:HeaderedContentControl.Content>
