--- a/src/Vts.Gui.Silverlight/View/Application/SolverDemoView.xaml
+++ b/src/Vts.Gui.Silverlight/View/Application/SolverDemoView.xaml
@@ -153,7 +153,9 @@
                         </controls:TabItem.Header>
                         <local:MapView
                             DataContext="{Binding MapVM}"
-                            Background="LightSteelBlue"/>
+                            VerticalAlignment="Stretch"
+                            HorizontalAlignment="Stretch"
+                            Margin="0,0,3,0"/>
                     </controls:TabItem>
                     <controls:TabItem Name="tabMesh" Header="Mesh Map View" Visibility="Collapsed">
                         <local:MapView
