Added padding to the 0 and z value so they don't overlap
--HG--
branch : lm-150515-oxyplot

--- a/src/Vts.Gui.Silverlight/View/Application/Panels/MapView.xaml
+++ b/src/Vts.Gui.Silverlight/View/Application/Panels/MapView.xaml
@@ -29,7 +29,7 @@
         </Grid>
         <!-- Places the z values on the map view -->
         <TextBlock Grid.Row="1" Grid.Column="0" Text="{Binding Path=MainResource.Label_Z0, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Top" HorizontalAlignment="Right"/>
-        <TextBlock x:Name="ZMax" Grid.Row="1" Grid.Column="0" Text="{Binding Path=MainResource.Label_ZMax, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Top" HorizontalAlignment="Right"/>
+        <TextBlock x:Name="ZMax" Grid.Row="1" Grid.Column="0" Margin="0, 20,0,0" Text="{Binding Path=MainResource.Label_ZMax, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Top" HorizontalAlignment="Right"/>
         <!-- Map and the map options -->
         <Image x:Name="MapImage" Grid.Row="1" Grid.Column="1" Source="{Binding Bitmap}" Stretch="UniformToFill" VerticalAlignment="Top" SizeChanged="MapImage_OnSizeChanged" />
         <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center">
