Fixed the issue with the MapView log toggle (same issue as PlotView) Fixed the map issue with the bitmap resizing in a non uniform way
--HG--
branch : lm-150515-oxyplot

--- a/src/Vts.Gui.Silverlight/View/Application/Panels/MapView.xaml
+++ b/src/Vts.Gui.Silverlight/View/Application/Panels/MapView.xaml
@@ -17,7 +17,7 @@
             <ColumnDefinition Width="*" MinWidth="450"/>
         </Grid.ColumnDefinitions>
         <!-- Places the rho values on the map view -->
-        <Grid Grid.Row="0" Grid.Column="1">
+        <Grid Grid.Row="0" Grid.Column="1" MinWidth="500">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
