--- a/src/Vts.Gui.Silverlight/View/Application/Panels/SubPanels/PhotonHittingDensitySolutionDomainOptionView.xaml
+++ b/src/Vts.Gui.Silverlight/View/Application/Panels/SubPanels/PhotonHittingDensitySolutionDomainOptionView.xaml
@@ -59,7 +59,7 @@
                         Text="Frequency-Domain"  Margin="3,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Left"/>
                     <RadioButton 
                         Grid.Row="2" Grid.Column="1"
-                        DataContext="{Binding FluenceOfRhoAndZAndFtOption}" IsEnabled="True"
+                        DataContext="{Binding FluenceOfRhoAndZAndFtOption}" IsEnabled="False"
                         Tag="{Binding ID}" Content="{Binding Path=MainResource.Label_PHDOfRhoAndZAndFt, Source={StaticResource LocalizedStrings}}"  IsChecked="{Binding IsSelected, Mode=TwoWay}" 
                         GroupName="PHDSolutionDomainOptionView" VerticalAlignment="Center" HorizontalAlignment="Left"/>
                     <RadioButton 
